--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,8 +15,26 @@
     All Content - Inter, sans-serif
 */
 
+/* html {
+  max-width: 1440px;
+  margin-inline: auto;
+} */
+
 header {
   height: 80vh;
+  transition: height 1s;
+}
+
+.make-space {
+  min-height: 550px;
+  height: 35vh;
+  /* animation: makeSpace 5s; */
+}
+
+@keyframes makeSpace {
+  100% {
+    height: fit-content;
+  }
 }
 
 body {
@@ -35,6 +53,7 @@ h1 {
   width: 535px;
   border-bottom: 1px solid #404040;
   margin-block: 30px;
+  animation: fadeIn 3s;
 }
 
 .hide {
@@ -173,7 +192,7 @@ input[type="text"] {
   z-index: 1;
   background: linear-gradient(110deg, #ffffff01, #ffffff 10%, #ffffff01 20%);
   background-size: 200% 100%;
-  animation: gradientLoader 1s linear infinite reverse;
+  animation: gradientLoader 1s linear infinite reverse, fadeIn 1s;
 }
 
 @keyframes gradientLoader {
@@ -182,6 +201,15 @@ input[type="text"] {
   }
   100% {
     background-position-x: 200%;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -261,13 +289,38 @@ input[type="text"] {
 /* ~~~~~~~~~~ CARDS ~~~~~~~~~~ */
 
 .response {
-  max-width: 1200px;
+  /* min-width: fit-content; */
+  max-width: 1240px;
   margin-inline: auto;
+}
+
+@media (min-width: 915px) and (max-width: 1379px) {
+  .response {
+    max-width: 820px;
+  }
+}
+
+@media (max-width: 914px) {
+  .header {
+    height: 40vh;
+  }
+  #loc-search {
+    flex-direction: column;
+  }
+
+  .response {
+    max-width: 400px;
+  }
+
+  .date {
+    justify-content: center;
+  }
 }
 
 .cards {
   margin-top: 30px;
-  grid-template-columns: repeat(auto-fill, minmax(380px, 500px));
+  grid-template-columns: repeat(auto-fill, minmax(380px, 400px));
+  /* align-self: center; */
   /* row-gap: 10px; */
 }
 
