--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,7 @@
             placeholder="Enter Location"
             required
           />
+          <div id="loc-suggest"></div>
         </div>
         <button
           id="search-btn"
