--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -373,14 +373,31 @@ input[type="text"]:focus {
 }
 
 @media (min-width: 915px) and (max-width: 1379px) {
+  /* .header {
+    height: 50vh;
+  } */
+
+  .make-space {
+    height: max-content;
+    /* max-height: fit-content; */
+    animation: makeSpace 5s;
+  }
+
   .response {
     max-width: 820px;
   }
 }
 
 @media (max-width: 914px) {
-  .header {
-    height: 40vh;
+  /* .header {
+    height: 50vh;
+  } */
+
+  .make-space {
+    height: max-content;
+    /* height: fit-content; */
+    /* max-height: fit-content; */
+    animation: makeSpace 5s;
   }
   #loc-search {
     flex-direction: column;
