Render returned API data on website. Change data source to APIs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,7 +97,7 @@
 
     <!--Render Event Cards with content once response received-->
 
-    <section id="content" class="response">
+    <section id="content" class="response hide">
       <% for (a=0; a < 2; a++) { %>
       <div class="date flex wrap g20">
         <h2 class="event-date">SATURDAY, 01-JAN</h2>
